Redo boto-requiring test filtering.

--- a/pytest.ini
+++ b/pytest.ini
@@ -21,4 +21,6 @@ markers =
     only_asyncio: marks tests as only enabled when --reactor=asyncio is passed
     only_not_asyncio: marks tests as only enabled when --reactor=asyncio is not passed
     requires_uvloop: marks tests as only enabled when uvloop is known to be working
+    requires_botocore: marks tests that need botocore (but not boto3)
+    requires_boto3: marks tests that need botocore and boto3
 filterwarnings =
