--- a/tox.ini
+++ b/tox.ini
@@ -241,7 +241,7 @@ deps =
     {[testenv]deps}
     botocore>=1.4.87
 commands =
-    pytest --cov=scrapy --cov-report=xml --cov-report= {posargs:tests -k s3}
+    pytest --cov=scrapy --cov-report=xml --cov-report= {posargs:tests -m requires_botocore}
 
 [testenv:botocore-pinned]
 basepython = {[pinned]basepython}
@@ -252,4 +252,4 @@ install_command = {[pinned]install_command}
 setenv =
     {[pinned]setenv}
 commands =
-    pytest --cov=scrapy --cov-report=xml --cov-report= {posargs:tests -k s3}
+    pytest --cov=scrapy --cov-report=xml --cov-report= {posargs:tests -m requires_botocore}
