Add ruff with basic rules.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,8 @@
 repos:
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  rev: v0.8.1
+  hooks:
+    - id: ruff
 - repo: https://github.com/PyCQA/bandit
   rev: 1.7.9
   hooks:
