--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,9 +72,9 @@ version = {file = "./scrapy/VERSION"}
 
 [tool.mypy]
 ignore_missing_imports = true
+implicit_reexport = false
 
 # Interface classes are hard to support
-
 [[tool.mypy.overrides]]
 module = "twisted.internet.interfaces"
 follow_imports = "skip"
@@ -91,6 +91,14 @@ follow_imports = "skip"
 [[tool.mypy.overrides]]
 module = "scrapy.settings.default_settings"
 ignore_errors = true
+
+[[tool.mypy.overrides]]
+module = "itemadapter"
+implicit_reexport = true
+
+[[tool.mypy.overrides]]
+module = "twisted"
+implicit_reexport = true
 
 [tool.bumpversion]
 current_version = "2.12.0"
@@ -315,13 +323,9 @@ ignore = [
 ]
 
 [tool.ruff.lint.per-file-ignores]
-# Exclude files that are meant to provide top-level imports
-"scrapy/__init__.py" = ["E402"]
-"scrapy/core/downloader/handlers/http.py" = ["F401"]
-"scrapy/http/__init__.py" = ["F401"]
-"scrapy/linkextractors/__init__.py" = ["E402", "F401"]
-"scrapy/selector/__init__.py" = ["F401"]
-"scrapy/spiders/__init__.py" = ["E402", "F401"]
+# Circular import workarounds
+"scrapy/linkextractors/__init__.py" = ["E402"]
+"scrapy/spiders/__init__.py" = ["E402"]
 
 # Skip bandit in tests
 "tests/**" = ["S"]
